# 3d-compiler

./: Cargo.toml  main.py  scene.dsl  styles.css
backend/routes/: __init__.py  chat.py  compile.py  scene.py
backend/services/: __init__.py  compiler_service.py  llm_service.py  scene_service.py
compiler/ir/: Cargo.toml  component.rs  constraint.rs  entity.rs  ids.rs  mod.rs  motion.rs  scene.rs  test.rs  timeline.rs  values.rs
compiler/optimize/: cost_model.rs  equivalence.rs  mod.rs
compiler/renderer/: adapter.rs  bridge.rs  error.rs  interpolation.rs  mod.rs  scene_map.rs  sync.rs  visibility.rs
compiler/runtime/: Cargo.toml  engine.rs  error.rs  loader.rs  mod.rs  snapshot.rs  snapshot_builder.rs
compiler/semantic/: approval.rs  context.rs  diagnostics.rs  errors.rs  symbol_table.rs  test.rs  validators.rs
dsl/: ARCHITECTURE.md  Cargo.toml  PROJECT_STRUCTURE.md  ast.rs  errors.rs  grammar.md  lexer.rs  lib.rs  lower_to_ir.rs  parser.rs
dsl/benches/: compilation_bench.rs
dsl/examples/: complete_scene.dsl
dsl/validator/: library.rs  references.rs  schema.rs  syntax.rs  units.rs
frontend/: index.html  styles.css
frontend/js/: app.js  chat.js  compiler-bridge.js  renderer.js  sample-dsl.js  state.js
mathlib/: __init__.py
mathlib/algebra/: equations.py  expressions.py  polynomials.py  solvers.py
mathlib/calculus/: curves.py  derivatives.py  integrals.py  limits.py
mathlib/core/: matrix.py  scalar.py  tensor.py  units.py  vector.py
mathlib/errors/: math_errors.py  (+1 more)
wasm/: Cargo.toml.bak  cargo.toml  lib.rs
web/: app.js  index.html
(+66 files in other folders)
