# Cargo.toml (root workspace)

[workspace]
members = [
    "dsl",
    "compiler/runtime",
    "compiler/ir",
    "wasm"
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0